{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 516,
  "lineage": "fa5ec85c-c9cc-09b7-035a-b8e0b8cdbb50",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ACS-ext-alb/c2b1e5916865aa58",
            "arn_suffix": "app/ACS-ext-alb/c2b1e5916865aa58",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ACS-ext-alb-22244375.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ACS-ext-alb/c2b1e5916865aa58",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ACS-ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c969b5c53397c87c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0859132976f8bbca6"
              },
              {
                "subnet_id": "subnet-09242565805931de2"
              }
            ],
            "subnets": [
              "subnet-0859132976f8bbca6",
              "subnet-09242565805931de2"
            ],
            "tags": {
              "Name": "ACS-ext-alb"
            },
            "tags_all": {
              "Name": "ACS-ext-alb"
            },
            "vpc_id": "vpc-02a66982e413c7505",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ialb/86bd58112cf687e1",
            "arn_suffix": "app/ialb/86bd58112cf687e1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-1805421266.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ialb/86bd58112cf687e1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04fe75b721a52313c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058be69d6ee436e71"
              },
              {
                "subnet_id": "subnet-066060b31087851ad"
              }
            ],
            "subnets": [
              "subnet-058be69d6ee436e71",
              "subnet-066060b31087851ad"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "tags_all": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-02a66982e413c7505",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ACS-ext-alb/c2b1e5916865aa58/9168a7351cb275aa",
            "certificate_arn": "arn:aws:acm:us-east-1:847322602513:certificate/cbcd4f64-3ba4-4f8e-8f6c-070e25c22927",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/nginx-tgt/3c0073e56b82fb67",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ACS-ext-alb/c2b1e5916865aa58/9168a7351cb275aa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ACS-ext-alb/c2b1e5916865aa58",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.lamislick",
            "module.ALB.aws_acm_certificate_validation.lamislick",
            "module.ALB.aws_lb.ext-alb",
            "module.ALB.aws_lb_target_group.nginx-tgt",
            "module.ALB.aws_route53_record.lamislick",
            "module.ALB.data.aws_route53_zone.lamislick",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ialb/86bd58112cf687e1/b4f81a616819aead",
            "certificate_arn": "arn:aws:acm:us-east-1:847322602513:certificate/cbcd4f64-3ba4-4f8e-8f6c-070e25c22927",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/wordpress-tgt/9bb7b012141a19af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ialb/86bd58112cf687e1/b4f81a616819aead",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:loadbalancer/app/ialb/86bd58112cf687e1",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.lamislick",
            "module.ALB.aws_acm_certificate_validation.lamislick",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.lamislick",
            "module.ALB.data.aws_route53_zone.lamislick",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/opeyemi-tooling-tgt/dedc8503eaf9aa08",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener-rule/app/ialb/86bd58112cf687e1/b4f81a616819aead/5bfa135435a835ed",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.lamislick.click"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener-rule/app/ialb/86bd58112cf687e1/b4f81a616819aead/5bfa135435a835ed",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:listener/app/ialb/86bd58112cf687e1/b4f81a616819aead",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.lamislick",
            "module.ALB.aws_acm_certificate_validation.lamislick",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.lamislick",
            "module.ALB.data.aws_route53_zone.lamislick",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/nginx-tgt/3c0073e56b82fb67",
            "arn_suffix": "targetgroup/nginx-tgt/3c0073e56b82fb67",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/nginx-tgt/3c0073e56b82fb67",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/opeyemi-tooling-tgt/dedc8503eaf9aa08",
            "arn_suffix": "targetgroup/opeyemi-tooling-tgt/dedc8503eaf9aa08",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/opeyemi-tooling-tgt/dedc8503eaf9aa08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "opeyemi-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/wordpress-tgt/9bb7b012141a19af",
            "arn_suffix": "targetgroup/wordpress-tgt/9bb7b012141a19af",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:847322602513:targetgroup/wordpress-tgt/9bb7b012141a19af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a25a4b725ed90b42",
            "domain": "vpc",
            "id": "eipalloc-0a25a4b725ed90b42",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-174-129-43-97.compute-1.amazonaws.com",
            "public_ip": "174.129.43.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ACS-EIP-true"
            },
            "tags_all": {
              "Name": "ACS-EIP-true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:internet-gateway/igw-00cb251de767b0944",
            "id": "igw-00cb251de767b0944",
            "owner_id": "847322602513",
            "tags": {
              "Name": "ACS-vpc-02a66982e413c7505-IG!"
            },
            "tags_all": {
              "Name": "ACS-vpc-02a66982e413c7505-IG!"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a25a4b725ed90b42",
            "connectivity_type": "public",
            "id": "nat-048f952967ecc7508",
            "network_interface_id": "eni-0ed58290de864141d",
            "private_ip": "10.0.2.120",
            "public_ip": "174.129.43.97",
            "subnet_id": "subnet-09242565805931de2",
            "tags": {
              "Name": "ACS-Nat-true"
            },
            "tags_all": {
              "Name": "ACS-Nat-true"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083102a57beb1b98b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-048f952967ecc7508",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083102a57beb1b98b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_nat_gateway.nat",
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00cb251de767b0944",
            "id": "r-rtb-0fcf5ca28ad1633ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcf5ca28ad1633ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:route-table/rtb-083102a57beb1b98b",
            "id": "rtb-083102a57beb1b98b",
            "owner_id": "847322602513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Private-Route-Table-true"
            },
            "tags_all": {
              "Name": "ACS-Private-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:route-table/rtb-0fcf5ca28ad1633ff",
            "id": "rtb-0fcf5ca28ad1633ff",
            "owner_id": "847322602513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Public-Route-Table-true"
            },
            "tags_all": {
              "Name": "ACS-Public-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f34b72b97658a29e",
            "route_table_id": "rtb-083102a57beb1b98b",
            "subnet_id": "subnet-058be69d6ee436e71"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8e0c091cffe07d1",
            "route_table_id": "rtb-083102a57beb1b98b",
            "subnet_id": "subnet-066060b31087851ad"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056699e02776e4f5d",
            "route_table_id": "rtb-083102a57beb1b98b",
            "subnet_id": "subnet-074e18b1bad3c0b50"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b5bbaa2990000e5",
            "route_table_id": "rtb-083102a57beb1b98b",
            "subnet_id": "subnet-0339504dd74209870"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6f2b45ed49fa345",
            "route_table_id": "rtb-0fcf5ca28ad1633ff",
            "subnet_id": "subnet-09242565805931de2"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0555f1dc179666e13",
            "route_table_id": "rtb-0fcf5ca28ad1633ff",
            "subnet_id": "subnet-0859132976f8bbca6"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-058be69d6ee436e71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058be69d6ee436e71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-066060b31087851ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066060b31087851ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-074e18b1bad3c0b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074e18b1bad3c0b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-0339504dd74209870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0339504dd74209870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-09242565805931de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09242565805931de2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-0"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:subnet/subnet-0859132976f8bbca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0859132976f8bbca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847322602513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-1"
            },
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:vpc/vpc-02a66982e413c7505",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04609d076e967c8cf",
            "default_route_table_id": "rtb-0ce43b81969a704c6",
            "default_security_group_id": "sg-02273a345958435fb",
            "dhcp_options_id": "dopt-032bdd9b1a3ac5dd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a66982e413c7505",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce43b81969a704c6",
            "owner_id": "847322602513",
            "tags": {
              "Name": "ACS-VPC"
            },
            "tags_all": {
              "Name": "ACS-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:847322602513:instance/i-0f324364200bfa275",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f324364200bfa275",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pbl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e773a7617e81fe1",
            "private_dns": "ip-10-0-2-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.51",
            "public_dns": "ec2-44-203-108-208.compute-1.amazonaws.com",
            "public_ip": "44.203.108.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0803f588e754c011f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09242565805931de2",
            "tags": {
              "Name": "ACS-Jenkins"
            },
            "tags_all": {
              "Name": "ACS-Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c969b5c53397c87c"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:847322602513:instance/i-0d3388526ce4fd2e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3388526ce4fd2e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pbl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017d7596d2f60882a",
            "private_dns": "ip-10-0-2-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.221",
            "public_dns": "ec2-34-205-28-165.compute-1.amazonaws.com",
            "public_ip": "34.205.28.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a82833f3d96c784",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09242565805931de2",
            "tags": {
              "Name": "ACS-artifactory"
            },
            "tags_all": {
              "Name": "ACS-artifactory"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c969b5c53397c87c"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:847322602513:instance/i-030fde29c6abf63ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030fde29c6abf63ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pbl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-021d5be4758bb9aa2",
            "private_dns": "ip-10-0-2-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.70",
            "public_dns": "ec2-44-195-26-85.compute-1.amazonaws.com",
            "public_ip": "44.195.26.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e70977d4f224818f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09242565805931de2",
            "tags": {
              "Name": "ACS-sonbarqube"
            },
            "tags_all": {
              "Name": "ACS-sonbarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c969b5c53397c87c"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0acd79acaaea245b2",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acd79acaaea245b2",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0b686d4eb012a3496",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b686d4eb012a3496",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0c969b5c53397c87c",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c969b5c53397c87c",
            "ingress": [],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-04fe75b721a52313c",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fe75b721a52313c",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-0a10a5da8790cb5a6",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a10a5da8790cb5a6",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847322602513:security-group/sg-01c396f4fcc1df8ba",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c396f4fcc1df8ba",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "847322602513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a66982e413c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3410499698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c969b5c53397c87c",
            "security_group_rule_id": "sgr-060e782d207a5aabe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2823170712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c969b5c53397c87c",
            "security_group_rule_id": "sgr-024313a396374d20d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-734498420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a10a5da8790cb5a6",
            "security_group_rule_id": "sgr-09ef0b22f1fd5e8a0",
            "self": false,
            "source_security_group_id": "sg-0acd79acaaea245b2",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-640918644",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fe75b721a52313c",
            "security_group_rule_id": "sgr-09dcea9e71c9b99b9",
            "self": false,
            "source_security_group_id": "sg-0a10a5da8790cb5a6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-281767211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b686d4eb012a3496",
            "security_group_rule_id": "sgr-09d5fb2fd4a4612e8",
            "self": false,
            "source_security_group_id": "sg-0acd79acaaea245b2",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2749957825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b686d4eb012a3496",
            "security_group_rule_id": "sgr-0d27f701b781a4b93",
            "self": false,
            "source_security_group_id": "sg-01c396f4fcc1df8ba",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-808425035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b686d4eb012a3496",
            "security_group_rule_id": "sgr-0b2c53c65f6d60de3",
            "self": false,
            "source_security_group_id": "sg-01c396f4fcc1df8ba",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3153920326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a10a5da8790cb5a6",
            "security_group_rule_id": "sgr-0f3a5b238b9741503",
            "self": false,
            "source_security_group_id": "sg-0c969b5c53397c87c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2658452840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0acd79acaaea245b2",
            "security_group_rule_id": "sgr-03c2951daa9c760ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2744298426",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c396f4fcc1df8ba",
            "security_group_rule_id": "sgr-0c7b38e12152d7f5f",
            "self": false,
            "source_security_group_id": "sg-04fe75b721a52313c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2707359626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c396f4fcc1df8ba",
            "security_group_rule_id": "sgr-00886d375d03c8b57",
            "self": false,
            "source_security_group_id": "sg-0acd79acaaea245b2",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    }
  ]
}